; ModuleID = '/home/carl/AnghaBench/php-src/ext/zlib/extr_zlib_fopen_wrapper.c_php_gziop_write.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/zlib/extr_zlib_fopen_wrapper.c_php_gziop_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }
%struct.php_gz_stream_data_t = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8*, i64)* @php_gziop_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @php_gziop_write(%struct.TYPE_3__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.php_gz_stream_data_t*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = inttoptr i64 %10 to %struct.php_gz_stream_data_t*
  store %struct.php_gz_stream_data_t* %11, %struct.php_gz_stream_data_t** %7, align 8
  %12 = load %struct.php_gz_stream_data_t*, %struct.php_gz_stream_data_t** %7, align 8
  %13 = getelementptr inbounds %struct.php_gz_stream_data_t, %struct.php_gz_stream_data_t* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i8*, i8** %5, align 8
  %16 = load i64, i64* %6, align 8
  %17 = call i32 @gzwrite(i32 %14, i8* %15, i64 %16)
  ret i32 %17
}

declare dso_local i32 @gzwrite(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
